--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav> -->
     </header>
-    <div class="content" class="blur">
+    <div class="content">
         <div class="intro">
             <h4>
                 The world was introduced to the term Corona Virus at the very end of 2019, following which everyone was
